fix changes when moved to java 8